// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Information Login renders correctly 1`] = `
<div
  className="css-24k5wi-UserInformationLogin"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="css-jdxnts"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        email
      </div>
      <div
        className="css-1rjy8ih"
      >
        <input
          className="css-pkbj54"
          defaultValue=""
          disabled={false}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="email"
          type="text"
        />
      </div>
    </div>
    <div
      className="css-1ezojgn"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        password
      </div>
      <div
        className="css-oqraj9"
      >
        <input
          className="css-pkbj54"
          defaultValue=""
          disabled={false}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="password"
          type="password"
        />
      </div>
    </div>
    <div
      className="css-4gteoc-Text"
      onClick={[Function]}
    >
      password__reset
    </div>
    <button
      className="css-tv06nn-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        login_button
      </div>
    </button>
  </form>
  <div
    className="css-plwos8-Text"
  >
    auth__no_account_existing
  </div>
  <div
    className="css-6354o9-Text"
    onClick={[MockFunction]}
  >
    auth__sign_up_now
  </div>
</div>
`;

exports[`User Information Login renders correctly loading 1`] = `
<div
  className="css-24k5wi-UserInformationLogin"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="css-jdxnts"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        email
      </div>
      <div
        className="css-1rjy8ih"
      >
        <input
          className="css-pkbj54"
          defaultValue=""
          disabled={false}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="email"
          type="text"
        />
      </div>
    </div>
    <div
      className="css-1ezojgn"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        password
      </div>
      <div
        className="css-oqraj9"
      >
        <input
          className="css-pkbj54"
          defaultValue=""
          disabled={false}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="password"
          type="password"
        />
      </div>
    </div>
    <div
      className="css-4gteoc-Text"
      onClick={[Function]}
    >
      password__reset
    </div>
    <button
      className="css-tv06nn-Button"
      disabled={true}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-nkhhc8-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        loading
      </div>
    </button>
  </form>
  <div
    className="css-plwos8-Text"
  >
    auth__no_account_existing
  </div>
  <div
    className="css-6354o9-Text"
    onClick={[MockFunction]}
  >
    auth__sign_up_now
  </div>
</div>
`;
